infra/rds.tf
resource "aws_db_subnet_group" "main" {
  name       = "bhandara-db-subnet-group"
  subnet_ids = [aws_subnet.public.id, aws_subnet.public_b.id]

  tags = {
    Name = "bhandara-db-subnet-group"
  }
}

resource "aws_db_instance" "postgres" {
  identifier             = "bhandara-db"
  engine                 = "postgres"
  engine_version         = "15"
  instance_class         = "db.t3.micro"
  allocated_storage      = 20
  db_name                = "bhandara_db"
  username               = "postgres"
  password               = var.db_password
  db_subnet_group_name   = aws_db_subnet_group.main.name
  vpc_security_group_ids = [aws_security_group.rds.id]
  skip_final_snapshot    = true
  publicly_accessible    = false

  tags = {
    Name = "bhandara-postgres"
  }
}
